--- a/src/components/ActiveQuiz/AnswersList/AnswerItem/AnswerItem.module.css
+++ b/src/components/ActiveQuiz/AnswersList/AnswerItem/AnswerItem.module.css
@@ -11,3 +11,10 @@
     background: rgba(255, 255, 255, .2);
     
 }
+.AnswerItem.success {
+    background: rgba(161, 240,69, .7)
+}
+
+.AnswerItem.error {
+    background: rgba(240, 87,108, .7)
+}
