finished practive forms:

--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -8,7 +8,6 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: 12px;
-
 }
 
 .Button:focus {
@@ -16,8 +15,9 @@
 }
 
 .Button:active {
-    box-shadow: inset 2px 2px 1px rgba(0,0,0,.3)
+    box-shadow: inset 2px 2px 1px rgba(0, 0, 0, .3);
 }
+
 .Button:disabled {
     background: #ccc;
     color: #000;
@@ -25,11 +25,11 @@
 }
 
 .error {
-    background: rgba(240, 87,108, 1)
+    background: rgba(240, 87, 108, 1);
 }
 
 .success {
-    background: rgba(161, 240,69, 1)
+    background: rgba(161, 240, 69, 1);
 }
 
 .primary {
