--- a/src/components/ActiveQuiz/ActiveQuiz.css
+++ b/src/components/ActiveQuiz/ActiveQuiz.css
@@ -1,7 +1,7 @@
 .ActiveQuiz {
     padding: 20px;
-    color: white;
-    border: 2px solid white;
+    color: #fff;
+    border: 2px solid #fff;
     border-radius: 5px;
     margin: 0 10px;
     box-sizing: border-box;
