--- a/src/components/ActiveQuiz/AnswersList/AnswerItem/AnswerItem.css
+++ b/src/components/ActiveQuiz/AnswersList/AnswerItem/AnswerItem.css
@@ -3,18 +3,18 @@
     border-radius: 5px;
     padding: 5px 10px;
     margin-bottom: 5px;
-    cursor: pointer; 
-    transition: background .3s ease-in-out;
+    cursor: pointer;
 }
 
 .AnswerItem:hover {
     background: rgba(255, 255, 255, .2);
-    
+    transition: background .3s ease-in-out;
 }
+
 .AnswerItem.success {
-    background: rgba(161, 240,69, .7)
+    background: rgba(161, 240, 69, .7);
 }
 
 .AnswerItem.error {
-    background: rgba(240, 87,108, .7)
+    background: rgba(240, 87, 108, .7);
 }
