--- a/src/components/Navigation/Drawer/Drawer.css
+++ b/src/components/Navigation/Drawer/Drawer.css
@@ -8,10 +8,9 @@
     padding: 20px 10px;
     box-sizing: border-box;
     background: #fff;
-    z-index: 90;
     transform: translateX(0px);
     transition: transform .22s ease-in;
-
+    z-index: 90;
 }
 
 .Drawer.close {
@@ -20,25 +19,22 @@
 
 .Drawer ul {
     list-style: none;
-    padding: 0;
     margin: 0;
-
+    padding: 0;
 }
 
 .Drawer ul li {
     margin-bottom: 15px;
-
 }
 
 .Drawer ul li a {
-    color: #363f54;
+    color: #363d54;
     font-size: 30px;
     text-decoration: none;
     background-color: #fff;
     position: relative;
     padding: 0 20px 10px 20px;
     transition: opacity .3s;
-
 }
 
 .Drawer ul li a:hover, .active {
